--- a/styles/style-header.css
+++ b/styles/style-header.css
@@ -14,10 +14,14 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: rgba(0, 0, 0, 0.1);
 }
 .navBar h1 {
     margin-top: 20px;
+    margin-left: 40px;
     font-size: 50px;
+    font-family: 'Fjalla One', sans-serif;
+    align-self: flex-start;
 }
 .navBar ul {
     /* background-color: #8BC6EC; */
