--- a/styles/style-header.css
+++ b/styles/style-header.css
@@ -4,8 +4,8 @@
     box-sizing: border-box;
     /* color: white; */
     /* color: #222; */
-    font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
+    /* font-family: 'Montserrat', sans-serif; */
+    font-family: 'Shippori Antique', sans-serif;
 }
 
 .navBar {
