--- a/styles/style-header.css
+++ b/styles/style-header.css
@@ -14,7 +14,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: #ffffff;
 }
 .navBar h1 {
     margin-top: 20px;
