--- a/styles/style-navbar.css
+++ b/styles/style-navbar.css
@@ -7,8 +7,7 @@ body {
     background-color: #07889b;
     margin: 0;
     overflow: hidden;
-    
-   
+    font-family: 'Fjalla One';   
     width: 100%;
     height: 80px;
   }
