--- a/styles/style-paginaprincipal.css
+++ b/styles/style-paginaprincipal.css
@@ -21,6 +21,14 @@
     font-family: 'Fjalla One';
 
   }
+  a {
+    padding:10px;
+    display: flex;
+    justify-content: center;
+    font-family: 'Fjalla One';
+    font-size: large;
+
+  }
   .styled-table {
     margin-left: auto;
     margin-right: auto;
