--- a/styles/style-modal.css
+++ b/styles/style-modal.css
@@ -1,30 +1,44 @@
- /* .ventana-modal{
-    display: flex;
-    background-color: rgba(0, 0, 0, 0.3);
-    align-items: center;
-    justify-content: center;
-    position: fixed;
-    pointer-events: none;
-    opacity: 0;  
-    top: 0;
-    left: 0;
-    height: 100vh;
-    width: 100vw;
-    transition: opacity 0.3s ease;
+.contenido-modal{
+  width:300px;
+  padding: 10px 20px;
+  border:1px black solid;
+  position: fixed;
+  left: 35%;
+  top: 46%;
+   
+
 }
-  .show {
-    pointer-events: auto;
-    opacity: 1;
-  }
-  
-  .contenido-modal {
-    background-color: #fff;
-    width: 600px;
-    max-width: 100%;
-    padding: 30px 50px;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    text-align: center;
-  }
-    */
-    
+#espacio-listado-alumnos{
+  padding: 10px 20px;
+  margin-left:20% ;
+  top: 300px;
+}
+
+.tabla-estudiantes{
+  width: 70%;
+  height: 100%;
+  font-size: 30px;
+  border-collapse: collapse;
+  margin: 25px 0;
+  font-size: 0.9em;
+  min-width: 400px;
+  border-radius: 5px 5px 0 0;
+  overflow: hidden;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+
+}
+
+.tabla-estudiantes .titulo {
+  background-color: #009879;
+  color: #ffffff;
+  text-align: left;
+  font-weight: bold;
+  font-size:20px;
+}
+
+#mensaje{
+color: red;
+
+}
+
+
