--- a/styles/style-infoGrupoEmpresas.css
+++ b/styles/style-infoGrupoEmpresas.css
@@ -1,12 +1,11 @@
 .main {
     font-family: 'Shippori Antique', sans-serif;
-    margin-top: 20px;
-    width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     /* align-items: center; */
-    /* padding-left: 50px; */
+    padding: 0px 50px;
 }
 .main-title {
     font-size: 35px;
@@ -14,24 +13,29 @@
 }
 .main-section {
     display: flex;
+    flex-direction: column;
+}
+.main-section-group {
+    display: flex;
     margin-top: 20px;
     margin-bottom: 50px;
+    flex-wrap: wrap;
     /* flex-direction: column; */
     /* align-items: center; */
-    justify-content: space-around;
+    /* justify-content: space-between; */
 }
 .main-clase-card {
     /* background-color: rgb(216, 192, 238); */
-    border: 1px solid #222;
-    height: 200px;
-    width: 250px;
-    /* margin-bottom: 20px; */
-    /* margin-right: 25px; */
+    border: 1px solid rgba(34, 34, 34, 0.5);
+    height: 250px;
+    width: 200px;
+    padding: 10px;
+    margin: 0px 25px 30px 25px;
     border-radius: 4px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     text-decoration: none;
     color: #222;
     box-shadow: 2px 2px 6px #999;
