--- a/styles/style-login.css
+++ b/styles/style-login.css
@@ -5,7 +5,7 @@
     /* color: white; */
     color: #222;
     font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
+    /* font-weight: bold; */
 }
 
 .header {
