--- a/styles/style-navbar.css
+++ b/styles/style-navbar.css
@@ -1,67 +1,85 @@
 body {
-    margin: 0;
-    padding: 0;
-    font-size: 15px;
-  }
-  nav {
-    background-color: #07889b;
-    margin: 0;
-    overflow: hidden;
-    font-family: 'Fjalla One';   
-    width: 100%;
-    height: 80px;
-  }
-  nav img{
-    float:left;
-    
-  }
-  nav ul {
-    margin: 0;
-    padding: 0;
-    float: right;
-    display: flex;
-  }
-  nav ul a {
-    color: rgb(255, 255, 255);
-    display: block;
-    line-height: 3em;
-    padding: 1em 3em;
-    text-decoration: none;
-    float: center;
-    font-family: 'Fjalla One';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  }
-  nav p {
-    color: rgb(255, 255, 255);
-    display: block;
-    text-decoration: none;
-    float: left;
-    font-family: 'Fjalla One';
+  margin: 0;
+  padding: 0;
+  /* font-size: 15px; */
+}
+.navBar {
+  /* background-color: #07889b; */
+  background-color: #427d86;
+  /* margin: 0; */
+  /* overflow: hidden; */
+  /* font-family: 'Fjalla One';    */
+  /* width: 100%; */
+  height: 100px;
+  padding: 0px 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: white;
+}
+.navBar-logo-and-title {
+  display: flex;
+  align-items: center;
+}
+.navBar-title {
+  font-family: 'Fjalla One', sans-serif;
+  font-size: 40px;
+  margin-left: 10px;
+}
+.navBar img{
+  /* float:left; */
+  width: 70px;
+  /* margin-right: 5px; */
+  outline: white;
+}
+.navBar-list {
+  /* float: right; */
+  display: flex;
+  padding: 0;
+}
+.navBar-list a {
+  color: rgb(255, 255, 255);
+  /* display: block; */
+  /* line-height: 3em;
+  padding: 1em 3em; */
+  text-decoration: none;
+  /* float: center; */
+  font-family: 'Fjalla One';
+  /* font-style: normal; */
+  /* font-weight: 400; */
+  /* font-display: swap; */
+  font-size: 17px;
+  margin-right: 20px;
+}
+/* nav p {
+  color: rgb(255, 255, 255);
+  display: block;
+  text-decoration: none;
+  float: left;
+  font-family: 'Fjalla One';
   font-style: normal;
   font-weight: 800;
   font-display: swap;
   font-size: large;
-  } 
-  nav li {
-    margin: 0;
-    padding: 0;
-    float: left;
-    display: flex;
-  }
-  nav li a {
-    color: rgb(255, 255, 255);
-    display: block;
-    line-height: 3em;
-    padding: 1em 3em;
-    text-decoration: none;
-    float: center;
-    font-family: 'Fjalla One';
+}  */
+/* nav li {
+  margin: 0;
+  padding: 0;
+  float: left;
+  display: flex;
+}
+nav li a {
+  color: rgb(255, 255, 255);
+  display: block;
+  line-height: 3em;
+  padding: 1em 3em;
+  text-decoration: none;
+  float: center;
+  font-family: 'Fjalla One';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  }
+} */
  
   
  
