--- a/styles/style-modal.css
+++ b/styles/style-modal.css
@@ -1,13 +1,25 @@
+.cabecera-modal{
+
+  padding: 0;
+  margin: 0;
+  border: 1px solid;
+  }
 
 .contenido-modal{
+  text-align: center;
   width:300px;
-  padding: 10px 20px;
-  border:1px black solid;
-  background-color: rgb(214, 200, 200);
+  padding-bottom: 10px;
+  border:1px  solid;
+  background-color: rgb(218, 218, 218);
   position: fixed;
   left: 35%;
-  top: 46%;
+  top: 20%;
+  border-radius: 5px 5px 0 0;
 }
+
+
+
+
 #espacio-listado-alumnos{
   padding: 10px 20px;
   margin-left:20% ;
@@ -28,13 +40,14 @@
 
 }
 
-.tabla-estudiantes .titulo {
+.titulo,.cabecera-modal {
   background-color: #009879;
   color: #ffffff;
   text-align: left;
   font-weight: bold;
   font-size:20px;
 }
+
 
 #mensaje{
 color: red;
