--- a/styles/style-infoGrupoEmpresas.css
+++ b/styles/style-infoGrupoEmpresas.css
@@ -20,32 +20,61 @@
     margin-top: 20px;
     margin-bottom: 50px;
     flex-wrap: wrap;
-    /* flex-direction: column; */
+    flex-direction: column;
     /* align-items: center; */
     /* justify-content: space-between; */
 }
 .main-clase-card {
     /* background-color: rgb(216, 192, 238); */
-    border: 1px solid rgba(34, 34, 34, 0.5);
-    height: 250px;
-    width: 200px;
-    padding: 10px;
+    /* border: 1px solid rgba(34, 34, 34, 0.5); */
+    /* height: 250px; */
+    /* width: 200px; */
+    padding: 20px;
     margin: 0px 25px 30px 25px;
-    border-radius: 4px;
+    border-radius: 6px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
+    /* align-items: center; */
+    /* justify-content: space-around; */
     text-decoration: none;
     color: #222;
     box-shadow: 2px 2px 6px #999;
 
-    transition: all .2s ease-in-out; 
+    /* border-bottom: 1px solid #bebebe; */
+
+    /* transition: all .2s ease-in-out;  */
 
 }
 .main-clase-card:hover {
-    transform: scale(1.06);
+    /* transform: scale(1.06); */
 }
-.main-clase-card img {
+.main-card-title {
+    display: flex;
+}
+.main-card-image {
     border-radius: 50%;
+    width: 70px;
+}
+.main-card-name {
+    margin-left: 30px;
+}
+
+.main-clase-card .main-card-list {
+    /* background-color: yellowgreen; */
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+
+    height: 0;
+    padding: 0;
+    overflow: hidden;
+
+    transition: all .5s ease;
+}
+.main-clase-card .main-card-list.activo{
+    height: auto;
+}
+
+.main-card-list h3 {
+    align-self: center;
 }
