Correccion ver grupo-calificar grupo

--- a/styles/style-groups.css
+++ b/styles/style-groups.css
@@ -38,7 +38,7 @@ padding: 12px 15px;
 }
 
 .GFG {
-    background-color: rgba(46, 114, 103, 0.527);
+    background-color: #07889b;
     color: rgb(255, 255, 255);
     padding: 5px 10px;
     text-align: center;
