--- a/styles/style-modal.css
+++ b/styles/style-modal.css
@@ -5,7 +5,8 @@
   position: fixed;
   left: 35%;
   top: 46%;
-   
+  justify-content: center;
+
 
 }
 #espacio-listado-alumnos{
@@ -25,6 +26,7 @@
   border-radius: 5px 5px 0 0;
   overflow: hidden;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  justify-content: center;
 
 }
 
