--- a/styles/style-modal.css
+++ b/styles/style-modal.css
@@ -6,6 +6,7 @@
   }
 
 .contenido-modal{
+  margin-left: 30px;
   text-align: center;
   width:300px;
   padding-bottom: 10px;
@@ -15,6 +16,7 @@
   left: 35%;
   top: 20%;
   border-radius: 5px 5px 0 0;
+  
 }
 
 
