Resumen de asistencias

--- a/styles/style-modal.css
+++ b/styles/style-modal.css
@@ -7,7 +7,6 @@
   top: 46%;
   justify-content: center;
 
-
 }
 #espacio-listado-alumnos{
   padding: 10px 20px;
@@ -27,6 +26,7 @@
   overflow: hidden;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
   justify-content: center;
+  align-content:center ;
 
 }
 
