--- a/styles/style-form.css
+++ b/styles/style-form.css
@@ -10,6 +10,13 @@
     color: red;
 }
 
+#div-btn-editar-invi{
+margin-left: 50px;
+border: #f3efef solid 1px;
+text-align: center;
+background-color: rgb(247, 246, 242);
+}
+
 .formulario {
     height: 700px;
     padding-top: 0px;
